# ai-pm-team

./: .gitignore  README.md
product-specs/agent-system/: Agent-Skills-Tools技术设计方案.md  README.md  demo.py  example.py  frontend.html  pyproject.toml  run_server.py  server.py  session_browser.html  trace_explorer.html
product-specs/agent-system/.checkpoints/: sess_0016a7ca630c.json  sess_01288db43457.json  sess_03027896abd1.json  sess_04215f64ce96.json  sess_071f932591be.json  sess_076816d3eca9.json  sess_0788e35f270d.json  sess_091cef8f4f55.json  sess_0ca31c490851.json  sess_0e80c992dd27.json  sess_0e8cf3797017.json  sess_0ef2888a6675.json  sess_10972a0ea209.json  sess_13d533d51463.json  sess_13fc23147126.json  sess_190d5a4dfbee.json  sess_19cd163041c5.json  sess_1bb91f5ec85a.json  sess_1d6906dfe5b9.json  sess_1efeba4ac8c9.json  sess_1f17f8aca583.json  sess_1fb91885134e.json  sess_2017f0dc13ef.json  sess_215e909ada92.json  sess_21f708d1b5e5.json  sess_231e0a1901bd.json  sess_235ea2cba4b6.json  sess_25e9140f04ab.json  sess_2641d1c5d800.json  sess_296ea491722d.json  sess_29700b1f3aa2.json  sess_2a96c3f52fc3.json  sess_2a986875cf1d.json  sess_2c613e2800c6.json  sess_2d7e2e90c255.json  sess_2e7b1aa8aef1.json  sess_2ee892e3b705.json  sess_2f1e89738574.json  sess_2fa816d76ea5.json  sess_2fb7071bb287.json  (+224 more)
product-specs/agent-system/data/: content_review.yaml
product-specs/agent-system/doc/: 2B-Agent-System-DeepAgent-完整设计方案.md  Agent-Context-Compression-CRM场景.md  Agent-Context-Compression-详细方案.md  Agent-Core-详细设计.md  Agent对话存储表设计.md  CRM-Agent上下文压缩完整设计方案.md  CRM-Agent上下文压缩详细设计方案.md  CRM-Context-Compression-业务技术闭环设计.md  CRM-Tool-Skill-通用工具体系设计.md  CRM-上下文压缩设计方案.md  DeepAgent-技术实现方案.md  Hermes-Context-Compression-分析.md  Plugin-Tool-Skill-边界分析.md  Trace链路持久化方案.md  V2-DeepAgent-差异分析与待办.md  三系统上下文压缩深度对比分析.md  三系统对比-DeepAgent-Hermes-ClaudeCode.md  三系统深度对比分析.md  上下文压缩场景分析.md  内容审查设计方案.md
product-specs/agent-system/sql/: init_tables.sql
product-specs/agent-system/src/: __init__.py  agent.py  async_agent.py  builtin_tools.py  context.py  coordinator.py  crm_backend.py  crm_skills.py  crm_tools.py  engine.py  hooks.py  langchain_agent.py  llm_client.py  mcp.py  plugins.py  service_backend.py  session.py  skills.py  state.py  subagent_config.py  (+2 more)
(+376 files in other folders)
